Add searchbar and card in ApiPlantScreen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="custom_green">#FF667542</color>
     <color name="custom_purple">#FF833183</color>
+    <color name="background_green">#FFE9FBDD</color>
 </resources>
