Change the launching icon, the notification icon, the appearance of the bottom sheet and the colors of the elements

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="custom_green">#FF667542</color>
     <color name="custom_purple">#FF833183</color>
     <color name="background_green">#FFE9FBDD</color>
+    <color name="custom_pink">#FFFEE2DD</color>
 </resources>
